--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
+    "@mantine/modals": "^8.0.1",
     "@mantine/notifications": "^8.0.1",
     "@tabler/icons-react": "^3.31.0",
     "first-image-search-load": "^0.4.0",
